syntax = "proto3";

//comment: 评论
package cfwf.micro_service.comment;
option java_package = "com.cfwf.micro_service.comment";

service Comment {
  //增加一条评论
  rpc InsertComment (InsertCommentRequest) returns (InsertCommentResponse) {}  
  
  //评论发布者删除评论
  rpc DeleteComment (DeleteCommentRequest) returns (CommonResponse) {}
  
  //获取评论列表
  rpc GetCommentList (GetCommentListRequest) returns (GetCommentListResponse) {}
 
} 

//通用rpc调用返回结果
enum RPC_CALL_RESULT {
   RPC_CALL_RESULT_NONE        = 0;   //不应出现
   RPC_CALL_RESULT_SUCCESS     = 1;   //成功
   RPC_CALL_RESULT_DB_ERROR    = 2;   //数据库出错
   RPC_CALL_RESULT_INPUT_ERROR = 3;   //传入数据有错，格式错误或者找不到对应条目
   RPC_CALL_RESULT_ERROR       = 4;   //其他错误
}

//一般rpc调用返回值
message CommonResponse{
	RPC_CALL_RESULT result = 1;
	string msg = 2;
} 

//评论类型
enum COMMENT_TYPE {
	COMMENT_TYPE_INIT = 0;
	COMMENT_TYPE_CLASS_WEIKE = 1; //班级点播课
}

message InsertCommentRequest {
	COMMENT_TYPE type = 1; //类型 
	int64 object_id = 2;   //评论对象id
	int64 userid = 3;      //评论者id	
	string content = 4;    //评论内容
}

message InsertCommentResponse {
	RPC_CALL_RESULT result = 1;
	int64 id = 2;   //该条评论的id
}

message DeleteCommentRequest {
	COMMENT_TYPE type = 1; //类型 
	int64 object_id = 2;   //评论对象id
	int64 id = 3;          //评论的id
}

message GetCommentListRequest {
	int32 page_size = 1;	//一页显示多少条
	int32 page = 2;	        //第几页
	COMMENT_TYPE type = 3;  //类型 
	int64 object_id = 4;    //评论对象id
}

message CommentItem {
	int64 userid = 1;        //评论发布者id 
	string time = 2;         //评论发布时间
	string content = 3;      //评论内容
	int64 id = 4;            //评论的id
}

message GetCommentListResponse {
	RPC_CALL_RESULT result = 1;
	int32 page_size = 2;          //每页条数
    int32 page = 3;              //当前页
    int32 page_count = 4;         //总页数
    int32 record_count = 5;       //总条数
	repeated CommentItem list = 6; //当前页结果列表
}














